project2-part1 completed
