# routes/employees.js
@@ -1,8 +1,11 @@
 const employeeRouter = require('express').Router();
 const employeeController = require('../controllers/employeeController')
+const {inputValidationRules, checkData} = require('../utilities/validator')
 
 employeeRouter.get('/', employeeController.getAllEmployee)
-employeeRouter.post('/', employeeController.CreateEmployee)
+employeeRouter.post('/', inputValidationRules(), checkData, employeeController.CreateEmployee)
+employeeRouter.put('/:id',inputValidationRules(), checkData, employeeController.updateEmployee)
+employeeRouter.delete('/:id', employeeController.deleteEmployee)
 
 
 module.exports = employeeRouter;
